--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Top 20 Bestseller Books Project</title>
+    <title>Top 20 Bestseller Books | 6.4-homework</title>
     <link rel="icon" href="./public/book-icon.png" />
   </head>
   <body>
